[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/menu/VolumeMenuItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/menu/MenuSlider.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/menu/AudioSettingsSlider.gd" type="Script" id=3]

[node name="AudioSettingsSlider" type="Node2D"]
script = ExtResource( 3 )

[node name="MenuSlider" parent="." instance=ExtResource( 2 )]

[node name="Label" parent="MenuSlider/Slider/LabelRoot" index="0"]
text = "Audio"

[node name="SoundVolume" parent="MenuSlider/Slider/MenuController" index="0" instance=ExtResource( 1 )]
position = Vector2( -80, 0 )
audio_bus_name = "Sounds"

[node name="MenuHighlight" parent="MenuSlider/Slider/MenuController/SoundVolume" index="0"]
scale = Vector2( 1, 1 )

[node name="ActivationSound" parent="MenuSlider/Slider/MenuController/SoundVolume" index="4"]
pause_mode = 0

[node name="Label" parent="MenuSlider/Slider/MenuController/SoundVolume" index="5"]
text = "Sound"

[node name="MusicVolume" parent="MenuSlider/Slider/MenuController" index="1" instance=ExtResource( 1 )]
position = Vector2( -80, 140 )
audio_bus_name = "Music"

[node name="ActivationSound" parent="MenuSlider/Slider/MenuController/MusicVolume" index="4"]
pause_mode = 0

[node name="BackLabelText" parent="MenuSlider/Slider/BackLabel" index="0"]
margin_left = 1408.0
margin_right = 1729.0

[editable path="MenuSlider"]

[editable path="MenuSlider/Slider/MenuController/SoundVolume"]

[editable path="MenuSlider/Slider/MenuController/MusicVolume"]
